used ProcessBuilder replace Runtime.exec to solve file path contain illegal chars problem, this solution worked in three platforms.